<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out?</string>

    <string-array name="drawer_titles">
        <item>Home</item>
        <item>Work Plan</item>
        <item>Settings</item>
        <item>Log out</item>
    </string-array>

    <!-- Module settings -->
    <string name="language">Language</string>
    <string name="spanish_label">Spanish</string>
    <string name="english_label">English</string>

    <!-- Module login -->
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="logging_in">Logging in…</string>
    <string name="title_activity_tracker">Tracker</string>
    <string name="user_pass_not_found">Username and/or Password not found</string>

    <!-- RequestManager strings -->
    <string name="req_man_error_contacting_service">Error contacting service</string>
    <string name="req_man_login_info_error">Invalid Login Info</string>
    <string name="req_man_retrieving_pdvs">Retrieving Sales Points Data</string>
    <string name="req_man_retrieving_pdv_detail">Retrieving Sales Point Details</string>
    <string name="req_man_retrieving_visit_activities">Retrieving Visit Activities</string>
    <string name="req_man_rescheduled_visit">Rescheduled Visit</string>
    <string name="req_man_ending__activity">Ending Activity</string>
    <string name="req_man_retrieving_evidence_type">Retrieving Evidence Type</string>
    <string name="req_man_sending_evidence">Sending Evidence, \nIt may take a few minutes</string>
    <string name="req_man_downloading_user_information">Downloading User Information</string>
    <string name="req_man_downloading_form">Downloading Form</string>
    <string name="req_man_starting_visit">Stating Visit</string>
    <!-- Error messages -->
    <string name="error_empty_field">Complete this field</string>
    <string name="error_invalid_tax_value">Tax is too high</string>
    <string name="error_existing_barcode">The code is already registered</string>
    <string name="error_invalid_email_address">Verify the email address</string>
    <string name="error_invalid_zip_code">Verify the zip code</string>

    <!-- FragmentNotifications -->
    <string name="no_notifications">You don\'t have notifications</string>

    <!-- Module notes -->
    <string name="add_note">Add new note</string>
    <string name="no_notes">You don\'t have notes</string>
    <string name="edit_note">Edit note</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <!-- Module weather -->
    <string name="location_unavailable">Unable to get your location</string>
    <string name="units_celsius">ºC</string>
    <string name="units_fahrenheit">ºF</string>
    <string name="units_mph">mph</string>
    <string name="units_kph">km/h</string>
    <string name="weather_unavailable">Weather information not available</string>

    <string-array name="weather_conditions">
        <item>	Tornado	</item>
        <item>	Tropical storm	</item>
        <item>	Hurricane	</item>
        <item>	Severe thunderstorms	</item>
        <item>	Thunderstorms	</item>
        <item>	Mixed rain and snow	</item>
        <item>	Mixed rain and sleet	</item>
        <item>	Mixed snow and sleet	</item>
        <item>	Freezing drizzle	</item>
        <item>	Drizzle	</item>
        <item>	Freezing rain	</item>
        <item>	Showers	</item>
        <item>	Showers	</item>
        <item>	Snow flurries	</item>
        <item>	Light snow showers	</item>
        <item>	Blowing snow	</item>
        <item>	Snow	</item>
        <item>	Hail	</item>
        <item>	Sleet	</item>
        <item>	Dust	</item>
        <item>	Foggy	</item>
        <item>	Haze	</item>
        <item>	Smoky	</item>
        <item>	Blustery	</item>
        <item>	Windy	</item>
        <item>	Cold	</item>
        <item>	Cloudy	</item>
        <item>	Mostly cloudy (night)	</item>
        <item>	Mostly cloudy (day)	</item>
        <item>	Partly cloudy (night)	</item>
        <item>	Partly cloudy (day)	</item>
        <item>	Clear (night)	</item>
        <item>	Sunny	</item>
        <item>	Fair (night)	</item>
        <item>	Fair (day)	</item>
        <item>	Mixed rain and hail	</item>
        <item>	Hot	</item>
        <item>	Isolated thunderstorms	</item>
        <item>	Scattered thunderstorms	</item>
        <item>	Scattered thunderstorms	</item>
        <item>	Scattered showers	</item>
        <item>	Heavy snow	</item>
        <item>	Scattered snow showers	</item>
        <item>	Heavy snow	</item>
        <item>	Partly cloudy	</item>
        <item>	Thundershowers	</item>
        <item>	Snow showers	</item>
        <item>	Isolated thundershowers	</item>
    </string-array>

    <!-- Module Traffic -->
    <string name="see_traffic">See traffic</string>

    <!-- Work Plan adapter list -->
    <string name="wp_item_customer">NAME: </string>
    <string name="wp_item_hour">HOUR: </string>
    <string name="wp_item_status">STATUS: </string>
    <string name="status_scheduled">Scheduled</string>
    <string name="status_process">In Process</string>
    <string name="wp_start"> Start </string>

    <!-- Customer Work Plan -->
    <string name="wp_customer"> CUSTOMER </string>
    <string name="wp_status"> STATUS </string>
    <string name="wp_address"> ADDRESS  </string>
    <string name="initial_scheduled_date">INITIAL SCHEDULED DATE</string>
    <string name="scheduled_end_date">SCHEDULED END DATE</string>
    <string name="wp_continue">CONTINUE</string>

    <!-- Visit Activities -->
    <string name="activity_header">ACTIVITIES</string>
    <string name="new_start_date">New Date</string>
    <string name="new_start_time">New Start Time</string>
    <string name="new_end_time">New End Time</string>
    <string name="accept">Accept</string>
    <string name="finished_activity">Finished activity</string>

    <!-- Rescheduled Visit -->
    <string name="title_dialog_message">Check it</string>
    <string name="message_reschedule_visit">The date should not be earlier than or equal to today</string>
    <string name="rescheduled_visit">Rescheduled visit</string>

    <!-- Steps Visit / Pasos de la Visita -->
    <string name="sv_evidence">Take evidence</string>
    <string name="sv_activities">Visit activities</string>
    <string name="sv_form">Forms</string>
    <string name="sv_reassign">Reassing</string>
    <string name="sv_finalize_visit">Finalize Visit</string>
    <string name="success_activities">\n\nAll activities have been carried out\n\n</string>

    <!-- DialogVisitActivity - Dialogo de actividades de la visita -->
    <string name="message_dialog_time">The start time should be less than the end time</string>
    <string name="assigned_time">Assigned time</string>
    <string name="finalize_activity">Finalize activity</string>

    <!-- FragmentEvidence / Fragment Evidencia -->
    <string name="text_camera">Take picture</string>
    <string name="retry">Retry</string>
    <string name="please_take_picture">Please take a picture to continue</string>

    <!-- menu - send -->
    <string name="send">Send</string>

    <!-- fragment_forms -->
    <string name="mandatory">Mandatory</string>
    <string name="optional">Optional</string>

    <!-- String General -->
    <string name="activate_gps_service">Please activate your GPS service to continue</string>

    <!-- FragmentDialogOmissionReason -->
    <string name="omitted_activities">Omitted Activities</string>
    <string name="omission_reason">Omission Reason</string>

</resources>
