<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:layout_margin="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:focusableInTouchMode="true"
            android:src="@drawable/logo"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shadow_land"
            android:id="@+id/imageView" />


        <EditText
            android:id="@+id/emailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/user"
            android:padding="5dp"
            android:textSize="@dimen/sizeMediumText"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:nextFocusDown="@+id/passwordUser"
            android:text=""/>

        <EditText
            android:id="@+id/passwordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:textSize="@dimen/sizeMediumText"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="@string/log_in"
            android:textSize="@dimen/sizeMediumText"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/sizeNormalText"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"/>

    </LinearLayout>



</LinearLayout>



